--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Amy</h1>
+<html>
+	<head>
+		<title></title>
+    <script type='text/javascript' src='/js/hungry.js'></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	</head>
+	<body>
+		<h1>Test</h1>
+	</body>
+</html>		
