moved submit button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<h3>Login</h3>
 			<form>
 				<input type="text" name="email" placeholder="email"><br>
-				<input type="password" name="password" placeholder="password">
+				<input type="password" name="password" placeholder="password"><br>
 				<button>Submit</button>
 			</form>
 			<h3>Sign Up</h3>
