moved submit button

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	</head>
 	<body>
 		<center>
-			<h1>Welcome to Hungry New Yorker</h1>
+			<h1>Hungry New Yorker</h1>
 			<h3>Login</h3>
 			<form>
 				<input type="text" name="email" placeholder="email"><br>
-				<input type="password" name="password" placeholder="password"><br>
+				<input type="password" name="password" placeholder="password"><br><br>
 				<button>Submit</button>
 			</form>
 			<h3>Sign Up</h3>
