--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<input type="password" name="password" placeholder="password"><br>
 				<button>Submit</button>
 			</form>
+		</center>
 			<h2>Sign Up</h2>
 	</body>
 </html>		
