--- a/dashboard.html
+++ b/dashboard.html
@@ -6,8 +6,8 @@
 	<center>
 		<h1>Hungry NYC</h1>
 		<nav>
-		    <a href="">Dashboard</a>
-		    <a href="">Profile</a>
+		    <a href="dashboard.html">Dashboard</a>
+		    <a href="user.html">Profile</a>
 		    <a href="">Logout</a>
   		</nav><br>
 		<form>
