--- a/user.html
+++ b/user.html
@@ -6,8 +6,8 @@
 <body>
   <h1>HungryNYC</h1>
   <nav>
-    <a href="">Dashboard</a>
-    <a href="">Profile</a>
+    <a href="/dashboard.html">Dashboard</a>
+    <a href="/user.html">Profile</a>
     <a href="">Logout</a>
   </nav>
   <section class="user">
