--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 				<button>Submit</button>
 			</form>
 		</center>
-			<h2>Sign Up</h2>
+			<a href="signup.html">Sign Up</a>
 	</body>
 </html>		
