moved signup button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 				<input type="text" name="email" placeholder="email"><br>
 				<input type="password" name="password" placeholder="password"><br>
 				<button>Submit</button>
-			</form>
-		</center>
+			</form></br>
 			<h2>Sign Up</h2>
+			</center>
 	</body>
 </html>		
