--- a/signup.html
+++ b/signup.html
@@ -6,9 +6,9 @@
 <body>
   <h1>HungryNYC - Sign Up</h1>
 
-  <form>
-    <input type="text" name="f_name" placeholder="First Name">
-    <input type="text" name="l_name" placeholder="Last Name">
+  <form method="POST" action="">
+    <input type="text" name="first" placeholder="First Name">
+    <input type="text" name="last" placeholder="Last Name">
     <input type="text" name="email" placeholder="Email">
     <input type="text" name="password" placeholder="Password">
     <button>Sign Up</button>
