--- a/dashboard.html
+++ b/dashboard.html
@@ -3,13 +3,13 @@
 	<title>Hungry NYC Dashboard</title>
 </head>
 <body>
-	<center>
+	<div class="selection">
 		<h1>Hungry NYC</h1>
 		<nav>
 		    <a href="">Dashboard</a>
 		    <a href="">Profile</a>
 		    <a href="">Logout</a>
-  		</nav><br>
+			</nav><br>
 		<form>
 			Find me a 
 			<select>
@@ -37,6 +37,9 @@
 			<br><br>
 			<button>Generate Restaurant</button>
 		</form>
-	</center>
+	</div>
+	<div class="result">
+		<h1>Results</h1>
+	</div>
 </body>
 </html>
