--- a/signup.html
+++ b/signup.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <title>HungryNYC - Sign Up</title>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script type='text/javascript' src='./js/signup.js'></script>
 </head>
 <body>
   <h1>HungryNYC - Sign Up</h1>
