--- a/dashboard.html
+++ b/dashboard.html
@@ -2,8 +2,9 @@
 <head>
 	<title>Hungry NYC Dashboard</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script type="text/javascript" src="./js/dashboard.js"></script>
-	<link rel="stylesheet" type="text/css" href="./css/style.css" />
+	<script src="https://rawgit.com/flatiron/director/master/build/director.min.js"></script>
+	<script type="text/javascript" src="./js/dashboard_routers.js"></script>
+	<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 </head>
 <body>
 	<div class="selection">
@@ -13,7 +14,7 @@
 		    <a href="user.html">Profile</a>
 		    <a href="">Logout</a>
 			</nav><br>
-		<form>
+		<form action='#results'>
 			Find me a 
 			<select>
 				<option value="Pizza">Pizza</option>
@@ -41,7 +42,7 @@
 			<button>Generate Restaurant</button>
 		</form>
 	</div>
-	<div class="result">
+	<div data-route="results" class="result">
 		<h1>Results</h1>
 	</div>
 </body>
