added timer and direction

--- a/dashboard.html
+++ b/dashboard.html
@@ -43,7 +43,19 @@
 		</form>
 	</div>
 	<div data-route="results" class="result">
-		<h1>Results</h1>
+		<h1 class="timer"></h1>
+		<h1 class="name"></h1>
+		<h3 class="address"></h3>
+		<img class="rating" src=""/>
+		<h3 class="phone"></h3>
+		<form class="save">
+			<input type="hidden" name="name"/>
+			<input type="hidden" name="address"/>
+			<input type="hidden" name="ratign"/>
+			<input type="hidden" name="phone"/>
+			<button>I Want to Go!</button>
+		</form>
+		<button>Next!</button>
 	</div>
 </body>
 </html>
