structure user profile layout with color guides

--- a/user.html
+++ b/user.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
   <title>HungryNYC - User Profile</title>
+
+  <link rel="stylesheet" type="text/css" href="./css/profile.css">
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script type='text/javascript' src='../js/hungry.js'></script>
 </head>
 <body>
-  <h1>HungryNYC</h1>
-  <nav>
-    <a href="/dashboard.html">Dashboard</a>
-    <a href="/user.html">Profile</a>
-    <a href="">Logout</a>
-  </nav>
+  <header>
+    <h1>HungryNYC</h1>
+    <nav>
+      <a href="./dashboard.html">Dashboard</a>
+      <a href="./user.html">Profile</a>
+      <a href="">Logout</a>
+    </nav>
+  <header>
   <section class="user">
     <h2>About</h2>
     <ul>
