added names to select options

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,25 +17,25 @@
 		<form action='#results'>
 			Find me a 
 			<select>
-				<option value="Pizza">Pizza</option>
-				<option value="Chinese">Chinese</option>
-				<option value="Italian">Italian</option>
-				<option value="Sushi">Sushi</option>
-				<option value="American">American</option>
+				<option name="category" value="Pizza">Pizza</option>
+				<option name="category" value="Chinese">Chinese</option>
+				<option name="category" value="Italian">Italian</option>
+				<option name="category" value="Sushi">Sushi</option>
+				<option name="category" value="American">American</option>
 			</select>
 			restaurant in 
 			<select>
 				<option value="Brooklyn" placeholder>Brooklyn</option>
-				<option value="Manhatten">Manhatten</option>
+				<option value="Manhattan">Manhatten</option>
 				<option value="Queens">Queens</option>
 				<option value="Bronx">Bronx</option>
 				<option value="Staten_Island">Staten Island</option>
 			</select>
 			for the 
 			<select>
-			    <option value="Chinatown">Chinatown</option>
-			    <option value="Midtown">Midtown</option>
-				<option value="Flatiron">Flatiron</option>
+			    <option name ="neighborhood" value="Chinatown">Chinatown</option>
+			    <option name ="neighborhood" value="Midtown">Midtown</option>
+				<option name ="neighborhood" value="Flatiron">Flatiron</option>
 			</select> 
 			neighborhood
 			<br><br>
