Added class and name to dropdowns in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
 			</nav><br>
 		<form action='#results'>
 			Find me a 
-			<select>
+			<select class = "food_categoty_dropdown">
 				<option name="category" value="Pizza">Pizza</option>
 				<option name="category" value="Chinese">Chinese</option>
 				<option name="category" value="Italian">Italian</option>
@@ -32,7 +32,7 @@
 				<option value="Staten_Island">Staten Island</option>
 			</select>
 			for the 
-			<select>
+			<select class = "neighborhood_dropdown">
 			    <option name ="neighborhood" value="Chinatown">Chinatown</option>
 			    <option name ="neighborhood" value="Midtown">Midtown</option>
 				<option name ="neighborhood" value="Flatiron">Flatiron</option>
