finished dashboard functionality

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
 		    <a href="user.html">Profile</a>
 		    <a href="">Logout</a>
 			</nav><br>
-		<form action='#results'>
+		<form class='search' action='#results'>
 			Find me a 
 			<select>
 				<option value="Pizza">Pizza</option>
