--- a/user.html
+++ b/user.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="./css/profile.css">
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  <script type='text/javascript' src='../js/hungry.js'></script>
+  <script type="text/javascript" src="../js/edit.js"></script>
 </head>
 <body>
   <header>
@@ -17,14 +17,16 @@
       <a href="">Logout</a>
     </nav>
   <header>
+
   <section class="user">
     <h2>About</h2>
     <ul>
       <li>Jennifer Lawrence</li>
       <li>Email address</li>
     </ul>
-    <button>Edit Info</button>
+    <a href="#openModal">Edit Info</a>
   </section>
+
   <section class="favorites">
     <h2>Favorites</h2>
     <ul>
@@ -33,6 +35,7 @@
       <li>Capital Grille</li>
     </ul>
   </section>
+
   <section class="history">
     <h2>History</h2>
     <ul>
@@ -41,5 +44,30 @@
       <li>Olive Garden</li>
     </ul>
   </section>
+
+
+  <div id="openModal" class="edit-form-modal">
+    <a href="#close" title="close" class="close-it">Close!</a>
+    <form method="PUT" action="" id="edit-form">
+    <div class="input-group">
+      <input type="text" name="first"  required>
+      <label>First Name</label>
+    </div>
+      <div class="input-group">
+        <input type="text" name="last"  required>
+        <label>Last Name</label>
+      </div>
+      <div class="input-group">
+        <input type="text" name="email" required>
+        <label>Email</label>
+      </div>
+      <div class="input-group">
+        <input type="text" name="password" required>
+        <label>Password</label>
+      </div>
+      <button>Save</button>
+    </form>
+  </div>
+
 </body>
 </html>
