add show/hide full list option

--- a/user.html
+++ b/user.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" type="text/css" href="./css/profile.css">
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  <script type="text/javascript" src="../js/edit.js"></script>
+  <script type="text/javascript" src="./js/profile.js"></script>
+  <script type="text/javascript" src="./js/edit.js"></script>
 </head>
 <body>
   <header>
@@ -29,20 +30,37 @@
 
   <section class="favorites">
     <h2>Favorites</h2>
-    <ul>
+    <ul class="truncateList" data-list-items="2">
       <li>Junior's</li>
       <li>Ippudo</li>
       <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
+      <li>Capital Grille</li>
     </ul>
+    <button class="toggle">See all</button>
   </section>
 
   <section class="history">
     <h2>History</h2>
-    <ul>
+    <ul class="truncateList" data-list-items="1">
       <li>McDonald's</li>
       <li>Chipotle</li>
       <li>Olive Garden</li>
     </ul>
+    <button class="toggle">See all</button>
   </section>
 
 
