--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
 			</select>
 			restaurant in 
 			<select class="borough" name="borough">
-				<option value="Manhattan" placeholder>Manhatten</option>
+				<option value="Manhattan" placeholder>Manhattan</option>
 				<option value="Brooklyn">Brooklyn</option>
 				<option value="Queens">Queens</option>
 				<option value="Bronx">Bronx</option>
