--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
 		<h1>Hungry NYC</h1>
 		<nav>
 		    <a href="dashboard.html">Dashboard</a>
-		    <a href="user.html">Profile</a>
+		    <a href="profile.html">Profile</a>
 		    <a href="">Logout</a>
 			</nav><br>
 		<form class='search' action='#results'>
