--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
 				<option name="category" value="American">American</option>
 			</select>
 			restaurant in 
-			<select>
+			<select class = "borough">
 				<option value="Brooklyn" placeholder>Brooklyn</option>
 				<option value="Manhattan">Manhatten</option>
 				<option value="Queens">Queens</option>
