update dashboard search results

--- a/dashboard.html
+++ b/dashboard.html
@@ -48,6 +48,7 @@
 		<h3 class="address"></h3>
 		<img class="rating" src=""/>
 		<h3 class="phone"></h3>
+		<h3 class="yelp_website"></h3>
 		<form class="save">
 			<input type="hidden" name="name"/>
 			<input type="hidden" name="address"/>
