--- a/dashboard.html
+++ b/dashboard.html
@@ -44,6 +44,7 @@
 	</div>
 	<div data-route="results" class="result">
 		<h1 class="timer"></h1>
+		<iframe class="google_maps"></iframe>
 		<h1 class="name"></h1>
 		<h3 class="address"></h3>
 		<img class="rating" src=""/>
