--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<center>
 			<h1>Hungry NYC</h1>
 			<h2>Login</h2>
-			<form>
+			<form method="POST" action="/sessions">
 				<input type="text" name="email" placeholder="email"><br>
 				<input type="password" name="password" placeholder="password"><br>
 				<button>Submit</button>
