--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 	<head>
 		<title>Hungry New Yorker Index</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script type='text/javascript' src='../js/hungry.js'></script>
+    <script type='text/javascript' src='js/index.js'></script>
 	</head>
 	<body>
 		<center>
 			<h1>Hungry NYC</h1>
 			<h2>Login</h2>
 			<form>
-				<input type="text" name="email" placeholder="email"><br>
-				<input type="password" name="password" placeholder="password"><br>
+				<input class="email" type="text" name="email" placeholder="email"><br>
+				<input class="password" type="password" name="password" placeholder="password"><br>
 				<button>Submit</button>
 			</form></br>
 			<h2>Sign Up</h2>
