--- a/index.html
+++ b/index.html
@@ -1,27 +1,3 @@
-
-<!-- <html>
-	<head>
-		<title>Hungry New Yorker Index</title>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script type='text/javascript' src='js/index.js'></script>
-	</head>
-	<body>
-		<center>
-			<h1>Hungry NYC</h1>
-			<h2>Login</h2>
-			<form>
-				<input class="email" type="text" name="email" placeholder="email"><br>
-				<input class="password" type="password" name="password" placeholder="password"><br>
-				<button>Submit</button>
-			</form></br>
-			<h2>Sign Up</h2>
-			</center>
-			</form>
-		</center>
-			<a href="signup.html">Sign Up</a>
-	</body>
-</html>	 -->	
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -59,6 +35,7 @@
       </form>
     </div>
 
+    <!-- Signup Form -->
     <div id="signup" class="signup-form-modal">
       <a href="#close" title="close" class="close-it">Close!</a>
       <form method="PUT" action="" id="signup-form">
@@ -91,4 +68,3 @@
   <script type='text/javascript' src='./js/signup.js'></script>
 </body>
 </html>
-
