added classes to login form

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <!--   Login Form -->
     <div id="login" class="login-form-modal">
       <a href="#close" title="close" class="close-it">Close!</a>
-      <form method="POST" action="" id="login-form">
+      <form class="login_form" method="POST" action="" id="login-form">
         <div class="input-group">
-          <input type="text" name="email" required>
+          <input class ="login_email" type="text" name="email" required>
           <label>Email</label>
         </div>
         <div class="input-group">
-          <input type="text" name="password" required>
+          <input class="login_pass" type="password" name="password" required>
           <label>Password</label>
         </div>
         <button>Login</button>
