--- a/dashboard.html
+++ b/dashboard.html
@@ -17,11 +17,11 @@
 		<form class='search' action='#results'>
 			Find me a 
 			<select class="category" name="category">
-<!-- 				<option value="Pizza">Pizza</option>
+				<option value="Pizza">Pizza</option>
 				<option value="Chinese">Chinese</option>
 				<option value="Italian">Italian</option>
 				<option value="Sushi">Sushi</option>
-				<option value="American">American</option> -->
+				<option value="American">American</option>
 			</select>
 			restaurant in 
 			<select class="borough" name="borough">
@@ -33,9 +33,9 @@
 			</select>
 			for the 
 			<select class="neighborhood" name="neighborhood">
-<!-- 			    <option value="Chinatown">Chinatown</option>
+			    <option value="Chinatown">Chinatown</option>
 			    <option value="Midtown">Midtown</option>
-				<option value="Flatiron">Flatiron</option> -->
+				<option value="Flatiron">Flatiron</option>
 			</select> 
 			neighborhood
 			<br><br>
