fixing html form to be js acceptable

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>Hungry New Yorker Index</title>
 
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
+	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
   <div class="wrapper">
@@ -22,7 +25,7 @@
     <!--   Login Form -->
     <div id="login" class="login-form-modal">
       <a href="#close" title="close" class="close-it">Close!</a>
-      <form class="login_form" method="POST" action="" id="login-form">
+      <form method="POST" action="" id="login-form">
         <div class="input-group">
           <input class ="login_email" type="text" name="email" required>
           <label>Email</label>
