--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
 <body>
   <h1>HungryNYC - Sign Up</h1>
 
-  <form id="sign up">
+  <form id="sign-up">
     <input type="text" name="fname" placeholder="First Name">
     <input type="text" name="lname" placeholder="Last Name">
     <input type="text" name="email" placeholder="Email">
