--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="./js/index.js"></script>
+  <script type='text/javascript' src='./js/signup.js'></script>
 </head>
 <body>
   <section id="main">
-    <video class="background-video" muted loop>
-      <source src="//demosthenes.info/assets/videos/polina.webm" type="video/webm">
-      <source src="//demosthenes.info/assets/videos/polina.mp4" type="video/mp4">
-    </video>
+
     <div class="content">
       <h1>Hungry NYC</h1>
       <p class="tagline">For the hungry and indecisive New Yorker.</p>
       <a href="#login" class="btn">Log In</a> 
       <a href="#signup" class="btn">Sign Up</a>
+
+      <a href="#howitworks" class="how-it-works">How It Works</a>
     </div>
 
       <!--   Login Form -->
@@ -59,29 +59,24 @@
         <button>Sign Up</button>
       </form>
     </div>
-  </section>
 
-  <div id="about-btn">How does it work?</div>
-
-  <section id="how-it-works">
-    <div class="">
-      <ol>
-        <li>You select a type of cuisine and desired neighborhood in your borough.</li>
-        <li>We randomly generate a great restaurant for you to go to.</li>
-        <li>You have three chances to make a decision, otherwise we make the decision for you.</li>
-      </ol>
+    <div id="howitworks" class="info-modal">
+      <a href="#close" title="close" class="close-it">Close!</a>
+      <div id="info">
+        <h2>How it works</h2>
+        <ol>
+          <li>You select a type of cuisine and desired neighborhood in your borough.</li>
+          <li>We randomly generate a great restaurant for you to go to.</li>
+          <li>You have three chances to make a decision, otherwise we make the decision for you.</li>
+        </ol>
+      </div>
     </div>
+
   </section>
 
-
-
-
-<!--   <footer>
+  <footer>
   Powered by <a href="https://www.yelp.com" target="_blank" class="logo_link"><img src="http://s3-media1.fl.yelpcdn.com/assets/2/www/img/14f29ad24935/map/miniMapLogo.png"></a>.
-  </footer> -->
-
-<!--   // <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  // <script type='text/javascript' src='./js/signup.js'></script> -->
+  </footer>
 </body>
 </html>
 
