--- a/profile.html
+++ b/profile.html
@@ -13,8 +13,8 @@
   <header>
     <h1>HungryNYC</h1>
     <nav>
-      <a href="./dashboard.html">Dashboard</a>
-      <a href="./user.html">Profile</a>
+      <a href="./dashboard">Dashboard</a>
+      <a href="./user">Profile</a>
       <a href="">Logout</a>
     </nav>
   <header>
@@ -33,17 +33,6 @@
     <ul class="truncateList" data-list-items="2">
       <li>Junior's</li>
       <li>Ippudo</li>
-      <li>Capital Grille</li>
-      <li>Capital Grille</li>
-      <li>Capital Grille</li>
-      <li>Capital Grille</li>
-      <li>Capital Grille</li>
-      <li>Capital Grille</li>
-      <li>Capital Grille</li>
-      <li>Capital Grille</li>
-      <li>Capital Grille</li>
-      <li>Capital Grille</li>
-      <li>Capital Grille</li>
       <li>Capital Grille</li>
       <li>Capital Grille</li>
       <li>Capital Grille</li>
