--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,9 @@
 		<nav>
 		    <a href="dashboard.html">Dashboard</a>
 		    <a href="profile.html">Profile</a>
-		    <a href="">Logout</a>
+		    <form id="logout">
+				<button>Logout</button>
+		    </form>
 			</nav><br>
 		<form class='search' action='#results'>
 			Find me a 
