--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <input class="login_pass" type="password" name="password" required>
           <label>Password</label>
         </div>
-        <button>Login</button>
+        <button id="login-button">Login</button>
       </form>
     </div>
 
