--- a/dashboard.html
+++ b/dashboard.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 	<title>Hungry NYC Dashboard</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://rawgit.com/flatiron/director/master/build/director.min.js"></script>
 	<script type="text/javascript" src="./js/dashboard_routers.js"></script>
-	<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 </head>
 <body>
 	<div class="selection">
@@ -12,9 +12,7 @@
 		<nav>
 		    <a href="dashboard.html">Dashboard</a>
 		    <a href="profile.html">Profile</a>
-		    <form id="logout">
-				<button>Logout</button>
-		    </form>
+			<button id="logout">Logout</button>
 			</nav><br>
 		<form class='search' action='#results'>
 			Find me a 
