fixed the user sign up, sign in, and logout functionality

--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
     <!-- Signup Form -->
     <div id="signup" class="signup-form-modal">
       <a href="#close" title="close" class="close-it">Close!</a>
-      <form method="PUT" action="" id="signup-form">
+      <form id="signup-form">
       <div class="input-group">
-        <input type="text" name="first"  required>
+        <input type="text" name="fname"  required>
         <label>First Name</label>
       </div>
         <div class="input-group">
-          <input type="text" name="last"  required>
+          <input type="text" name="lname"  required>
           <label>Last Name</label>
         </div>
         <div class="input-group">
-          <input type="text" name="email" required>
+          <input type="text" name="signup_email" required>
           <label>Email</label>
         </div>
         <div class="input-group">
-          <input type="text" name="password" required>
+          <input type="password" name="signup_password" required>
           <label>Password</label>
         </div>
-        <button>Sign Up</button>
+        <button id ="sign-up-button">Sign Up</button>
       </form>
     </div>
 
