--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="./js/index.js"></script>
   <script type='text/javascript' src='./js/signup.js'></script>
+  <script type='text/javascript' src='./js/wakeup.js'></script>
 </head>
 <body>
   <section id="main">
